Fix alternative wrap width definitions

--- a/sass/components/_wrap.scss
+++ b/sass/components/_wrap.scss
@@ -8,6 +8,8 @@
 @each $name, $value in $wrap-width {
 
 	.Wrap--#{camelize($name)} {
+		@extend %Wrap;
+		max-width: $value;
 		padding-left: _(map-get($wrap-padding, $name));
 		padding-right: _(map-get($wrap-padding, $name));
 		width: calc(100% - #{_(map-get($wrap-padding, $name)) * 2});
